Add update method.
The user and residents are having quite a difficult relation, need disscussing
