# backend/api/static/swagger.yaml
@@ -599,3 +599,36 @@ paths:
                         example: 0989898989
         '500':
           description: Error in retrieving fees
+  /user/update:
+    post:
+      summary: Update user information
+      description: Updates a user's information including username, email, and phone number.
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                new_name:
+                  type: string
+                  description: The new username for the user.
+                  example: johndoe
+                new_email:
+                  type: string
+                  format: email
+                  description: The new email address for the user.
+                  example: johndoe@example.com
+                new_number:
+                  type: string
+                  description: The new phone number for the user.
+                  example: "1234567890"
+      responses:
+        200:
+          description: User info updated successfully
+        401:
+          description: Unauthorized access
+        500:
+          description: Internal server error
